--- a/springboot-excel/pom.xml
+++ b/springboot-excel/pom.xml
@@ -26,18 +26,19 @@
         </dependency>
         <!--解析excel所需的依赖包-->
        <!--poi excel2003版本 xls格式的excel-->
-<!--        <dependency>-->
-<!--            <groupId>org.apache.poi</groupId>-->
-<!--            <artifactId>poi</artifactId>-->
-<!--            <version>3.9</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.9</version>
+        </dependency>
 <!--        &lt;!&ndash;xlsx格式excel的版本的poi excel2007版本&ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>org.apache.poi</groupId>-->
-<!--            <artifactId>poi-ooxml</artifactId>-->
-<!--            <version>3.9</version>-->
-<!--        </dependency>-->
-        <!--easyexcel-->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.9</version>
+        </dependency>
+
+<!--easyexcel-->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>easyexcel</artifactId>
